[package]
name = "adk-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Benchmarking framework for ADK-Rust agent performance measurement"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-bench"
readme = "README.md"
keywords = ["ai", "agent", "benchmark", "performance", "adk"]
categories = ["development-tools::profiling"]

[dependencies]
adk-core.workspace = true
adk-agent.workspace = true
adk-runner.workspace = true
adk-model = { workspace = true, features = ["gemini"] }
adk-eval.workspace = true
adk-tool.workspace = true
adk-session.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "time", "process", "sync", "fs"] }
tracing.workspace = true
chrono.workspace = true
futures.workspace = true
libc = "0.2"

[features]
default = []
# τ²-bench task quality adapter
tau2 = []
# BFCL (Berkeley Function Calling Leaderboard) task quality adapter
bfcl = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
proptest = "1.5"
tempfile = "3"
