[package]
name = "adk-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Browser automation tools for Rust Agent Development Kit (ADK-Rust) agents using WebDriver"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-browser"
readme = "README.md"
keywords = ["adk", "browser", "automation", "webdriver", "selenium"]
categories = ["web-programming", "development-tools"]

[dependencies]
adk-core.workspace = true
thirtyfour = "0.36"
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
base64 = "0.22"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
