[package]
name = "adk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line launcher for ADK agents"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-cli"
keywords = ["ai", "agent", "adk", "cli", "launcher"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "adk_cli"
path = "src/lib.rs"

[[bin]]
name = "adk"
path = "src/main.rs"

[dependencies]
adk-core = { path = "../adk-core", version = "0.1.0" }
adk-agent = { path = "../adk-agent", version = "0.1.0" }
adk-model = { path = "../adk-model", version = "0.1.0" }
adk-runner = { path = "../adk-runner", version = "0.1.0" }
adk-server = { path = "../adk-server", version = "0.1.0" }
adk-session = { path = "../adk-session", version = "0.1.0" }
adk-artifact = { path = "../adk-artifact", version = "0.1.0" }
adk-telemetry = { path = "../adk-telemetry", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
futures = "0.3"
axum = "0.7"
async-trait = "0.1"
serde_json = "1.0"
