[package]
name = "adk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line launcher for Rust Agent Development Kit (ADK-Rust) agents"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-cli"
keywords = ["ai", "agent", "adk", "cli", "launcher"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "adk_cli"
path = "src/lib.rs"

[[bin]]
name = "adk"
path = "src/main.rs"

[dependencies]
adk-core.workspace = true
adk-agent.workspace = true
adk-model.workspace = true
adk-runner.workspace = true
adk-server.workspace = true
adk-session.workspace = true
adk-artifact.workspace = true
adk-telemetry.workspace = true
adk-skill.workspace = true
clap = { version = "4.5", features = ["derive"] }
rustyline = "17.0"
tokio.workspace = true
anyhow.workspace = true
futures.workspace = true
axum = "0.8"
async-trait.workspace = true
serde_json.workspace = true
