[package]
name = "adk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core traits and types for Rust Agent Development Kit (ADK-Rust) agents, tools, sessions, and events"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-core"
keywords = ["ai", "agent", "adk", "llm", "gemini"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
