[package]
name = "adk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core traits and types for Rust Agent Development Kit (ADK-Rust) agents, tools, sessions, and events"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-core"
keywords = ["ai", "agent", "adk", "llm", "gemini"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rustls = { workspace = true, optional = true }

[features]
default = []
rustls = ["dep:rustls"]

[dev-dependencies]
async-stream = { workspace = true }
proptest = "1.5"
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }
