[package]
name = "adk-deploy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deployment manifest, bundling, and control-plane client for ADK-Rust"
keywords = ["adk", "deploy", "agents", "platform"]
categories = ["development-tools", "config"]
readme = "README.md"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
tracing.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
flate2.workspace = true
tar.workspace = true
dirs = "6"
url = "2"

[dev-dependencies]
tempfile = "3"
