[package]
name = "adk-doc-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Documentation audit system for ADK-Rust that validates documentation against actual crate implementations"
keywords = ["documentation", "audit", "validation", "rust", "adk"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# Core dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
semver = "1.0"

# CLI and file processing
clap = { version = "4.5", features = ["derive", "env"] }
walkdir = "2.5"
pulldown-cmark = "0.12"
syn = { version = "2.0", features = ["full", "parsing", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
toml = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database for audit history
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Temporary project creation for example validation
tempfile = "3.12"
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
proptest = "1.5"
tokio-test = "0.4"

[features]
default = []

[[bin]]
name = "adk-doc-audit"
path = "src/main.rs"