[package]
name = "adk-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Agent evaluation framework for ADK-Rust"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-eval"
readme = "README.md"
keywords = ["ai", "agent", "evaluation", "testing", "llm"]
categories = ["development-tools::testing"]

[dependencies]
adk-core.workspace = true
adk-runner.workspace = true
adk-session.workspace = true
adk-model.workspace = true
adk-memory = { workspace = true, optional = true }

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
futures.workspace = true
tracing.workspace = true
quick-xml = { version = "0.37", optional = true }
statrs = { version = "0.18", optional = true }

[features]
default = []
# User personas for evaluation (User_Simulator, Persona_Profile, PersonaRegistry)
personas = []
# EmbeddingScorer requires EmbeddingProvider from adk-memory
embedding = ["dep:adk-memory", "adk-memory/embedding-trait"]
# JUnit XML generation for CI integration
ci-helpers = ["dep:quick-xml"]
# Statistical testing (Wilcoxon signed-rank) for A/B comparison
statistics = ["dep:statrs"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test = "0.4"
tempfile = "3.0"
proptest = "1.5"
