[package]
name = "adk-guardrail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Guardrails framework for ADK agents - input/output validation, content filtering, PII redaction"
keywords = ["ai", "agents", "guardrails", "safety", "validation"]
categories = ["development-tools", "asynchronous"]

[dependencies]
adk-core.workspace = true
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

# Optional: JSON Schema validation
jsonschema = { version = "0.45", optional = true, default-features = false }

[features]
default = ["schema"]
schema = ["jsonschema"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
