[package]
name = "adk-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Semantic memory and search for ADK agents"
repository = "https://github.com/anthropics/adk-rust"
documentation = "https://docs.rs/adk-memory"
keywords = ["ai", "agent", "adk", "memory", "semantic"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
adk-core = { path = "../adk-core", version = "0.1.0" }
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
