[package]
name = "adk-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM model integrations for Rust Agent Development Kit (ADK-Rust) (Gemini, OpenAI, Claude, DeepSeek, etc.)"
repository = "https://github.com/zavora-ai/adk-rust"
documentation = "https://docs.rs/adk-model"
keywords = ["ai", "agent", "adk", "gemini", "llm"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"

[dependencies]
adk-core.workspace = true
adk-telemetry.workspace = true
adk-gemini = { workspace = true, optional = true }
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
serde_json.workspace = true
serde = { workspace = true }
async-openai = { version = "0.27", optional = true }
claudius = { version = "0.16", optional = true, default-features = false }
reqwest = { workspace = true, optional = true }
anyhow.workspace = true
tracing.workspace = true
base64 = "0.21"
ollama-rs = { version = "0.3.4", optional = true, default-features = false, features = ["stream"] }
schemars = { version = "1.0", optional = true }
aws-sdk-bedrockruntime = { version = "1", optional = true }
aws-config = { version = "1", optional = true, features = ["behavior-version-latest"] }
aws-smithy-types = { version = "1", optional = true }

[features]
default = ["gemini"]
gemini = ["dep:adk-gemini"]
openai = ["dep:async-openai"]
xai = ["openai"]
anthropic = ["dep:claudius"]
deepseek = ["dep:reqwest"]
ollama = ["dep:ollama-rs", "dep:schemars"]
groq = ["dep:reqwest"]
fireworks = ["openai"]
together = ["openai"]
mistral = ["openai"]
perplexity = ["openai"]
cerebras = ["openai"]
sambanova = ["openai"]
bedrock = ["dep:aws-sdk-bedrockruntime", "dep:aws-config", "dep:aws-smithy-types"]
azure-ai = ["dep:reqwest"]
all-providers = ["gemini", "openai", "xai", "anthropic", "deepseek", "ollama", "groq", "fireworks", "together", "mistral", "perplexity", "cerebras", "sambanova", "bedrock", "azure-ai"]

[dev-dependencies]
proptest = "1.5"
