[package]
name = "adk-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system for ADK-Rust agents"
keywords = ["adk", "agent", "plugin", "ai", "llm"]
categories = ["development-tools", "asynchronous"]

[dependencies]
adk-core = { path = "../adk-core", version = "0.3.0" }
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
