[package]
name = "adk-plugin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation = "https://docs.rs/adk-plugin"
readme = "README.md"
description = "Plugin system for ADK-Rust agents"
keywords = ["adk", "agent", "plugin", "ai", "llm"]
categories = ["development-tools", "asynchronous"]

[dependencies]
adk-core = { workspace = true }
tracing = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
